aggiunto gestione cancellazione e invio con server spento